--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 	<section class="header">
 		<nav>
-			<a href="index.html"><img src="../images/logo.png"></a>
+			<a href="index.html"><img src="images/logo.png"></a>
 			<div class="nav-links" id="nav-link">
 
 				<i class="fa fa-times" onclick="hideMenu()"></i>
