change home screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	<!-- Icon library -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -42,17 +43,144 @@
 
 		</nav>
 	</section>
-	<section class=" search-box">
+	<!-- <section class=" search-box">
 				<div class="search-text">
 					<h2>YOU ARE IN THE RIGHT PLACE</h2>
 					<h4>SEARCH HERE</h4>
-					<!-- The form -->
 					<form class="search-field">
 						<input class="effect-8" type="text" placeholder="Search.." name="search">
 						<button type="submit" onsubmit=""><i class="fa fa-search"></i></button>
 					</form>
 				</div>
+	</section> -->
+	<section class="company-intro">
+		<h2>We are build <span>SOFTWARE</span> to help</h2>
+		<h4>Build aesthetically pleasing apps & websites engineered to drive growth for the world's leading
+			businesses.</h4>
+		<div class="intro-button-row">
+			<a href="pages/services.html" class="button-tap">
+				<div class="elevated-button">
+					<h3 class="button-label">
+						Our Services
+					</h3>
+				</div>
+			</a>
+
+			<a href="pages/portfolio.html" class="button-tap">
+				<div class="elevated-button">
+					<h3 class="button-label">
+						Our Portfolio
+					</h3>
+				</div>
+			</a>
+		</div>
+		<img src="images/company_illustration.png" class="company-illustration">
+		<div class="whatwedo">
+			<h3 class="reveal">
+				What We <span>Do</span>
+			</h3>
+			<h4 class="reveal">
+				We work in teams across departments to create esteemed work that boosts out client's brands. Delivering
+				all business solutions in the core services. We are independent Design & Development agency.
+			</h4>
+		</div>
 	</section>
+	<section class="company-services">
+		<div class="company-service-div reveal">
+			<img src="images/graphic_design_home.png" alt="" class="company-service-image">
+			<h3 class="company-service-title">
+				graphic Design
+			</h3>
+			<h4 class="company-service-desc">We specialize in creating captivating graphics that effectively convey your
+				brand message and leave a lasting impression on your audience.
+			</h4>
+		</div>
+
+		<div class="company-service-div reveal">
+			<img src="images/app_design_home.png" alt="" class="company-service-image">
+
+			<h3 class="company-service-title">
+				App Design
+			</h3>
+			<h4 class="company-service-desc">
+				We offer professional and innovative solutions to transform your ideas into visually appealing and
+				user-friendly
+				mobile applications.
+			</h4>
+		</div>
+
+		<div class="company-service-div reveal">
+			<img src="images/web_development_home.png" alt="" class="company-service-image">
+
+			<h3 class="company-service-title">
+				Web Development
+			</h3>
+			<h4 class="company-service-desc">
+				Our web design service offers professional and responsive website solutions to help businesses establish
+				a strong online presence.
+			</h4>
+		</div>
+
+		<div class="company-service-div reveal">
+			<img src="images/smm_home.png" alt="" class="company-service-image">
+
+			<h3 class="company-service-title">
+				SMM
+			</h3>
+			<h4 class="company-service-desc">
+				Our Social Media Marketing (SMM) service helps businesses leverage the power of social media platforms
+				to reach and engage their target audience.
+			</h4>
+		</div>
+
+		<div class="company-service-div reveal">
+			<img src="images/ui_design_home.png" alt="" class="company-service-image">
+
+			<h3 class="company-service-title">
+				UI Design
+			</h3>
+			<h4 class="company-service-desc">
+				Our UI design service focuses on creating visually appealing and user-friendly interfaces that enhance
+				the overall user experience.
+			</h4>
+		</div>
+
+		<div class="company-service-div reveal">
+			<img src="images/seo_home.png" alt="" class="company-service-image">
+
+			<h3 class="company-service-title">
+				SEO
+			</h3>
+			<h4 class="company-service-desc">
+				Our SEO service is designed to improve your website's visibility and organic search rankings, driving
+				targeted traffic and increasing your online presence.
+			</h4>
+		</div>
+	</section>
+
+	<div class="stats-section">
+		<div class="stats-card">
+			<h2>Clients Satisfied</h2>
+			<p id="clientsCount">0</p>
+		</div>
+		<div class="stats-card">
+			<h2>Number of Projects Done</h2>
+			<p id="projectsCount">0</p>
+		</div>
+		<div class="stats-card">
+			<h2>Number of Experts</h2>
+			<p id="expertsCount">0</p>
+		</div>
+		<div class="stats-card">
+			<h2>Total Years of Establishment</h2>
+			<p id="yearsCount">0</p>
+		</div>
+	</div>
+	</section>
+	<footer>
+		&copy; 2023 Nvidia. All rights reserved.
+	</footer>
+
 	<script src="javascript/index.js"></script>
 </body>
 
